# cli_calculator

./: .gitignore  CMakeLists.txt  README.md  calc.c  calc.h  calculator_history.txt  expression_parser.c  main.c  process.md
